--- a/speechSynth.html
+++ b/speechSynth.html
@@ -13,7 +13,15 @@
   <script src="assets/scripts/speechSynth.js" type="module"></script>
   <script src="https://unpkg.com/launchdarkly-js-client-sdk@3"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R891Q86BWN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-R891Q86BWN');
+</script>
 <body>
   <header>
     <nav>
